--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body{
 }
 .container{
     background-color: rgb(166, 214, 198,0.3);
-    width: 300px;
-    height: 400px;
+    width: 250px;
+    height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,15 +24,15 @@ body{
     border-radius: 1rem;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
+    color: rgba(255, 255, 255, 0.877);
 }
-h1{
+h3{
     color: rgba(45, 246, 179, 0.648);
-    font-size: 2rem;
-    font-weight: bolder;
+    font-size: 1.8rem;
     margin-bottom: 1.5rem;
 }
 input{
-    padding: 8px 20px;
+    padding: 5px 15px;
     margin: 0.65rem;
     border-radius: 1rem;
     border: none;
